--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -9,15 +9,29 @@ android {
         targetSdkVersion 23
     }
 }
+repositories {
+    mavenCentral()
+    maven { url "http://dl.bintray.com/florent37/maven" }
+}
 
 dependencies {
+    compile files('libs/volley.jar')
+
+    // Misc Android
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:support-v13:23.1.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:palette-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.squareup.okhttp:okhttp:1.1.0'
-    compile 'com.github.orhanobut:logger:1.12'
-    compile files('libs/volley.jar')
+    compile 'com.android.support:design:23.1.1'
+
+    // 3rd Party
+    compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.github.florent37:glidepalette:1.0.4@aar'
+    compile 'com.squareup.okhttp:okhttp:2.6.0'
+
+    //debug
+    debugCompile 'com.github.orhanobut:logger:1.12'
+    compile 'com.facebook.stetho:stetho:1.1.0'
 }
